...
                      // Nombre
                      TextFormField(
                        controller:      _nameCtrl,
                        textCapitalization: TextCapitalization.words,
                        textInputAction: TextInputAction.next,
                        decoration: const InputDecoration(
                          labelText:  'Nombre',
                          prefixIcon: Icon(Icons.person_outlined),
                        ),
                        validator: Validators.name,
                      ),
                      const SizedBox(height: 16),

                      // Email
                      TextFormField(
                        controller:      _emailCtrl,
                        keyboardType:    TextInputType.emailAddress,
                        textInputAction: TextInputAction.next,
                        decoration: const InputDecoration(
                          labelText:  'Email',
                          prefixIcon: Icon(Icons.email_outlined),
                        ),
                        validator: Validators.email,
                      ),
                      const SizedBox(height: 16),

...
